--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       /* height: 250px; */
       font-size: 16px;
   }
-  #section1 {color: #fff; background-color: #1E88E5; height:850px}
+  #section1 {color: #fff; background-color: #1E88E5; height:1050px;}
   #section2 {color: #fff; background-color: #673ab7;}
   #section3 {color: #fff; background-color: #ff9800;}
   #section41 {color: #fff; background-color: #00bcd4;}
@@ -39,9 +39,7 @@
   <img src="Images/Rotary-serving-humanity.jpg" width="363" height="195" alt="" title="" border="0" align="right" hspace="15"/>
   <h1>Rotary Club of Caroline VA</h1>
   <h3>District 7610, Caroline, Virginia</h3>
-  <div align="center"><h5>Meetings:  Thursdays, at 7:30 A.M.</h5>
-  <h5>Denny's at Carmel Church (just west of I-95 exit 104)</h5>
-  <h5>Ruther Glen, VA  22546</h5></div>
+
 
 
 </div>
@@ -108,7 +106,7 @@
                 Thursdays, at 7:30 A.M.<br>
                 Denny's at Carmel Church (just west of I-95 exit 104)<br>
                 Ruther Glen, VA  22546<br>
-				<br><br>
+
 		</div>
 				
 		
